[package]
edition = '2018'
name = "jexl-eval"
version = "0.1.7"
authors = ["Mike Cooper <mythmon@gmail.com>", "The Sync Team <sync-team@mozilla.com>", "The Glean Team <glean-team@mozilla.com>"]
description = "A JEXL evaluator written in Rust"
license = "MPL-2.0"
repository = "https://github.com/mozilla/jexl-rs"

[dependencies]
jexl-parser = { version = "^0.1.7-alpha.0", path = "../jexl-parser" }
serde_json = "1.0.66"
serde = {version = "1.0.127", features = ["derive"]}
thiserror = "1.0.26"
anyhow = "1.0.42"
md5 = "0.7.0"
sha2 = "0.9.5"
voca_rs = "1.13.0"
semver = "1.0.4"
humantime = "2.1.0"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
